# FileFerry

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.md
.github/workflows/: release.yml
docs/: architecture_design.md  install_linux.md  install_macos.md  install_windows.md  packaging_test_report.md  requirements_analysis.md  requirements_v1.2.md  requirements_v1.3.md  requirements_v1.4.md  test_report.md  troubleshooting_install.md  uninstall.md  user_manual.md
fileferry/: __init__.py  cli.py  errors.py  gui.py  progress.py  protocol.py  receiver.py  sender.py
fileferry_gui/: __init__.py  app.py  main_window.py  ui_state.py  workers.py
packaging/: README.md
packaging/linux/: build_deb.sh  build_rpm.sh
packaging/linux/resources/: fileferry-cli-wrapper.sh  fileferry-gui-wrapper.sh  fileferry.desktop
packaging/macos/: build_pkg.sh  fileferry-wrapper.sh  uninstall_fileferry.sh
packaging/pyinstaller/: desktop_entrypoint.py  entrypoint.py  fileferry.spec  fileferry_gui.spec
packaging/windows/: build_inno.ps1  fileferry-recv.bat  fileferry-send.bat  fileferry.iss
scripts/: build_binary.py  build_packages.py
skills/fileferry-development/: SKILL.md
skills/fileferry-development/agents/: openai.yaml
tests/: test_cli.py  test_protocol.py  test_transfer.py  test_ui_state.py
